changing some data types

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.show-sql= true
 spring.jpa.open-in-view=true
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.security.user.name=ahmed
+spring.security.user.password=ahmed
