adding security to the Rest-Api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,12 @@ spring.jpa.show-sql= true
 spring.jpa.open-in-view=true
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.security.user.name=ahmed
-spring.security.user.password=ahmed
+debug = true
+#spring.security.user.name=ahmed
+#spring.security.user.password=ahmed
+#server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-store: src/main/resources/bootsecurity.p13
+#server.ssl.key-password= ahmed123
+#server.ssl.keyStoreType: PKCS12
+#server.ssl.keyAlias: bootsecurity
