--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.open-in-view=true
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 debug = true
+logging.level.org.springframework.* =debug
+logging.file.name= server.log
+spring.flyway.baseline-on-migrate=true
 #spring.security.user.name=ahmed
 #spring.security.user.password=ahmed
 #server.port=8443
